apps/rustdesk/deployment-rustdesk-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustdesk-web
  namespace: rustdesk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rustdesk-web
  template:
    metadata:
      labels:
        app: rustdesk-web
    spec:
      containers:
        - name: rustdesk-web
          image: pmietlicki/docker-rustdesk-web-client:v1.1.10
          ports:
            - containerPort: 5000
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
