apps/rustdesk/service-rustdesk-hbbr.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rustdesk-hbbr
  namespace: rustdesk
spec:
  type: LoadBalancer
  ports:
    - port: 21117
      targetPort: 21117
      protocol: TCP
      name: relay-tcp
    - port: 21119
      targetPort: 21119
      protocol: TCP
      name: relay-ws
  selector:
    app: rustdesk-hbbr
