apps/rustdesk/service-rustdesk-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rustdesk-web
  namespace: rustdesk
spec:
  type: ClusterIP
  selector:
    app: rustdesk-web
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
